# versionning

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in.cmake  HTML.manifest  INSTALL.txt  README.txt  index.html  params.json  version.cmake
Vers/: Version.html  VersionException.html  operator__.html  operator___idm11264.html  operator___idm15296.html  operator___idm20256.html  operator___idm47056.html  operator___idm6304.html  operator___idp100800.html  operator___idp101392.html  operator___idp10164816.html  operator___idp10169776.html  operator___idp102736.html  operator___idp103184.html  operator___idp104704.html  operator___idp105760.html  operator___idp10585120.html  operator___idp108736.html  operator___idp109088.html  operator___idp10957776.html  operator___idp110432.html  operator___idp110624.html  operator___idp110944.html  operator___idp111120.html  operator___idp111360.html  operator___idp111504.html  operator___idp11176320.html  operator___idp111776.html  operator___idp11181280.html  operator___idp111824.html  operator___idp11255184.html  operator___idp11260144.html  operator___idp11265280.html  operator___idp11270240.html  operator___idp11272432.html  operator___idp11277392.html  operator___idp11284992.html  operator___idp11289952.html  operator___idp11296032.html  operator___idp11300992.html  (+335 more)
examples/: CMakeLists.txt
examples/src/: example.cpp
images/: .directory
images/callouts/: .directory
include/Versionning/: Version.h  VersionException.h
index/: s03.html  s04.html
scripts/: config.sh  delivery.sh
share/cmake/: CMakeLists.txt  VersionningConfig.cmake.in  VersionningConfigVersion.cmake.in
share/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in.cmake  versionning.qbk
src/: CMakeLists.txt
src/example/: CMakeLists.txt  example1.cpp
src/test/: CMakeLists.txt  testStringConversions.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  testComparisonOperators.cpp  testStringConversions.cpp
versionning/: examples.html  installation.html  reference.html
